--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
 PORT=3001
 NODE_ENV=development
 REACT_APP_IS_LOCALHOST=1
+REACT_APP_BACKEND_URL=https://localhost:7199/api
 
 REACT_APP_ROUTER_BASE_NAME=
+
+CLOUDINARY_NAME=di7yhx8nt
+CLOUDINARY_KEY=419863164343379
+CLOUDINARY_SECRET=unDWyqHiMg_tsCHnrxOX5MMGdl8
