--- a/package.json
+++ b/package.json
@@ -3,19 +3,50 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ag-grid-enterprise/row-grouping": "^30.0.2",
+    "@ant-design/icons": "^5.1.4",
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.10.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
+    "@mui/x-data-grid": "^6.9.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-react": "^30.0.2",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "cloudinary": "^1.37.3",
+    "dotenv": "^16.3.1",
+    "formik": "^2.4.2",
+    "framer-motion": "^10.12.18",
+    "jquery": "^3.7.0",
+    "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^6.1.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-element-to-jsx-string": "^15.0.0",
+    "react-hook-form": "^7.45.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "redux": "^4.2.1",
-    "web-vitals": "^2.1.4"
+    "simplebar-react": "^3.2.4",
+    "sweetalert2": "^11.7.12",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
