--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ag-grid-react": "^30.0.2",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "chart.js": "^4.3.0",
     "cloudinary": "^1.37.3",
     "dotenv": "^16.3.1",
     "formik": "^2.4.2",
@@ -30,13 +32,17 @@
     "mdb-react-ui-kit": "^6.1.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "next": "^13.4.9",
+    "postcss": "^8.4.26",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-element-to-jsx-string": "^15.0.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.45.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
@@ -45,6 +51,7 @@
     "redux": "^4.2.1",
     "simplebar-react": "^3.2.4",
     "sweetalert2": "^11.7.12",
+    "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
