--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3001
 NODE_ENV=development
-REACT_APP_IS_LOCALHOST=1
-REACT_APP_BACKEND_URL=https://localhost:7199/api
+REACT_APP_IS_LOCALHOST=0
+REACT_APP_BACKEND_URL=https://foodcourtapi.azurewebsites.net/api
 
 REACT_APP_ROUTER_BASE_NAME=
 
